[package]
name = "chat"
version = "0.1.0"
authors = ["caiqingfeng <caiqingfeng@roadclouding.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.16.0", default-features = false }
futures = "0.3.1"
log = "0.4.8"
env_logger = "0.7.0"
async-std = "1.5"
